fixes desplegables
